# UHOST

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ci/: check-generated-benchmark-artifacts.sh  check-storage-drill-evidence.sh  config-safety-gate.sh  perf-gate.sh  supply-chain-gate.sh  targets.md  vuln-audit-ignore.txt  vuln-check.sh  vuln-denylist.txt  wave1-evidence-gate.sh  wave3-evidence-gate.sh
cmd/uhost-uvm-runner/: Cargo.toml
cmd/uhost-uvm-runner/src/: main.rs
cmd/uhostctl/: Cargo.toml
cmd/uhostctl/src/: main.rs
cmd/uhostctl/tests/: secrets_cli_runtime.rs  support_case_cli_runtime.rs
cmd/uhostd/: Cargo.toml
cmd/uhostd/src/: activation.rs  main.rs
cmd/uhostd/tests/: all_in_one.rs  auth_gate.rs  billing_support_entitlements_runtime.rs  console_workbench.rs  container_runtime.rs  contract_snapshots.rs  fleet_ops_rollups.rs  ha_anti_entropy_runtime.rs  hyperscale.rs  idempotency_runtime.rs  ingress_flow_audit.rs  mail_verify_auth_delivery.rs  notify_workflows.rs  route_ownership.rs  runtime_registration_quarantine.rs  secrets_reveal_runtime.rs  storage_drill_evidence.rs  storage_inspection_errors.rs  storage_streamed_reads_runtime.rs  summary_routes.rs  toaster.rs  uvm_claim_tier_runtime.rs  uvm_generated_validation_runtime.rs  uvm_resolved_contract.rs  wave1_evidence.rs  wave3_evidence.rs
cmd/uhostd/tests/snapshots/: activation_deployment_descriptors.json
cmd/uhostd/tests/support/: storage_runtime_harness.rs
configs/dev/: all-in-one.toml
configs/prod/: all-in-one.toml
configs/staging/: all-in-one.toml
crates/uhost-api/: Cargo.toml
crates/uhost-api/src/: lib.rs
crates/uhost-core/: Cargo.toml
crates/uhost-core/src/: clock.rs  concurrency.rs  config.rs  context.rs  crypto.rs  error.rs  extension.rs  feature.rs  lib.rs  logging.rs  metrics.rs  migrations.rs  rate_limit.rs  retry.rs  secret.rs  validation.rs
crates/uhost-runtime/: Cargo.toml
crates/uhost-runtime/src/: idempotency.rs  lib.rs  topology.rs
crates/uhost-store/: Cargo.toml
crates/uhost-store/src/: audit.rs  blob.rs  delivery.rs  document.rs  journal.rs  lease.rs  lib.rs  metadata.rs  registry.rs  relay.rs  workflow.rs
crates/uhost-store/tests/: document_cache_bust.rs  snapshot_checkpoint_public_surface.rs
crates/uhost-testkit/: Cargo.toml
crates/uhost-testkit/src/: lib.rs
crates/uhost-types/: Cargo.toml
crates/uhost-types/src/: common.rs  contracts.rs  event.rs  id.rs  lib.rs
crates/uhost-uvm/: Cargo.toml
crates/uhost-uvm-machine/: Cargo.toml
crates/uhost-uvm-machine/src/: lib.rs
crates/uhost-uvm-softvm/: Cargo.toml
crates/uhost-uvm-softvm/src/: lib.rs
crates/uhost-uvm/examples/: uvm_validation_report.rs
crates/uhost-uvm/src/: compatibility.rs  engine.rs  intent.rs  lib.rs  (+1 more)
deploy/bsd/: uhostd.rc
deploy/launchd/: com.projectuhost.uhostd.plist
deploy/systemd/: uhostd.service
deploy/windows/: uhostd-service.ps1
docs/: README.md  architecture.md  dependency-ledger.md  extensions.md  roadmap.md  status.md  threat-model.md  uvm-virtualization-stack.md
docs/adr/: 0001-workspace-architecture.md  0002-network-security-plane.md  0003-active-passive-ha-control.md  0004-lifecycle-extension-contracts.md  0005-mail-dns-integration.md  0006-uvm-runtime-adapter-model.md
docs/api/: README.md
docs/benchmarks/: scheduler-placement.md  uvm-qemu-comparison.md
docs/config/: overview.md
docs/runbooks/: README.md  backup-restore.md  beginner-maintenance-guide.md  bootstrap.md  event-delivery.md  failover-drill.md  host-readiness.md  incident-response.md  managed-uvm-dev-quickstart.md  on-call.md  routed-secret-reveal.md  supply-chain-release-gate.md  uvm-host-vs-guest-unixbench.md
migrations/config/: 0001_observe_otlp_defaults.toml
migrations/schema/: 0001_lifecycle_extension_registry.toml  0002_governance_audit_chain.toml
openapi/: control-plane-v1.yaml
proto/: control-plane-v1.proto
scripts/: generate-provenance.sh  generate-release-state.sh  generate-sbom.sh  host-capability-preflight.sh  run-hyperscale.sh  run-qemu-tcg-boot-probe.sh  run-qemu-tcg-cloudimg-guest-control.sh  run-storage-drill-evidence.sh  run-uhost-managed-uvm.sh  run-uvm-boot-witness.sh  run-uvm-host-vs-guest-unixbench.sh  run-uvm-native-guest-control.sh  run-uvm-stack-validation.sh  sign-artifacts.sh  with-disposable-target-dir.sh
services/uhost-svc-abuse/: Cargo.toml  README.md
services/uhost-svc-billing/: Cargo.toml  README.md
services/uhost-svc-console/: Cargo.toml  README.md
services/uhost-svc-container/: Cargo.toml  README.md
services/uhost-svc-control/: Cargo.toml  README.md
services/uhost-svc-data/: Cargo.toml  README.md
services/uhost-svc-dns/: Cargo.toml  README.md
services/uhost-svc-governance/: Cargo.toml  README.md
services/uhost-svc-ha/: Cargo.toml  README.md
services/uhost-svc-identity/: Cargo.toml  README.md
services/uhost-svc-ingress/: Cargo.toml  README.md
services/uhost-svc-lifecycle/: Cargo.toml  README.md
services/uhost-svc-mail/: Cargo.toml  README.md
services/uhost-svc-netsec/: Cargo.toml  README.md
services/uhost-svc-node/: Cargo.toml  README.md
services/uhost-svc-notify/: Cargo.toml  README.md
services/uhost-svc-observe/: Cargo.toml  README.md
services/uhost-svc-policy/: Cargo.toml  README.md
services/uhost-svc-scheduler/: Cargo.toml  README.md
services/uhost-svc-scheduler/benches/: placement.rs
services/uhost-svc-scheduler/src/: lib.rs
services/uhost-svc-secrets/: Cargo.toml  README.md
services/uhost-svc-storage/: Cargo.toml  README.md
services/uhost-svc-stream/: Cargo.toml  README.md
services/uhost-svc-tenancy/: Cargo.toml  README.md
services/uhost-svc-uvm-control/: Cargo.toml  README.md
services/uhost-svc-uvm-image/: Cargo.toml  README.md
services/uhost-svc-uvm-node/: Cargo.toml  README.md
services/uhost-svc-uvm-observe/: Cargo.toml  README.md
(+27 files in other folders)
