[workspace]
members = [
    "cmd/uhostctl",
    "cmd/uhostd",
    "cmd/uhost-uvm-runner",
    "crates/uhost-api",
    "crates/uhost-core",
    "crates/uhost-runtime",
    "crates/uhost-store",
    "crates/uhost-testkit",
    "crates/uhost-types",
    "crates/uhost-uvm",
    "crates/uhost-uvm-machine",
    "crates/uhost-uvm-softvm",
    "services/uhost-svc-abuse",
    "services/uhost-svc-billing",
    "services/uhost-svc-console",
    "services/uhost-svc-container",
    "services/uhost-svc-control",
    "services/uhost-svc-data",
    "services/uhost-svc-dns",
    "services/uhost-svc-governance",
    "services/uhost-svc-ha",
    "services/uhost-svc-identity",
    "services/uhost-svc-ingress",
    "services/uhost-svc-lifecycle",
    "services/uhost-svc-mail",
    "services/uhost-svc-netsec",
    "services/uhost-svc-node",
    "services/uhost-svc-notify",
    "services/uhost-svc-observe",
    "services/uhost-svc-policy",
    "services/uhost-svc-scheduler",
    "services/uhost-svc-secrets",
    "services/uhost-svc-storage",
    "services/uhost-svc-stream",
    "services/uhost-svc-tenancy",
    "services/uhost-svc-uvm-control",
    "services/uhost-svc-uvm-image",
    "services/uhost-svc-uvm-node",
    "services/uhost-svc-uvm-observe",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.94"
authors = ["Project UHost Contributors"]
repository = "https://example.invalid/uhost"

[workspace.dependencies]
argon2 = "0.5"
base64 = "0.22"
bytes = "1.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
getrandom = "0.3"
hmac = "0.12"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
proptest = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
zeroize = { version = "1.8", features = ["derive"] }

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
missing_docs = "warn"
unsafe_code = "deny"
unused_lifetimes = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
large_futures = "warn"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
debug = 1
incremental = true
