[package]
name = "uhost-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared HTTP helpers for UHost services and runtime"
readme = "../README.md"
repository = "https://github.com/docker-mobile/UHOST"
documentation = "https://github.com/docker-mobile/UHOST/tree/main/docs"
publish = false

[dependencies]
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
uhost-core = { path = "../uhost-core" }
uhost-types = { path = "../uhost-types" }

[dev-dependencies]
tokio.workspace = true
hyper-util.workspace = true
