[package]
name = "uhost-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core configuration, crypto, and utility primitives for UHost"
readme = "../README.md"
repository = "https://github.com/docker-mobile/UHOST"
documentation = "https://github.com/docker-mobile/UHOST/tree/main/docs"
publish = false

[dependencies]
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
uhost-types = { path = "../uhost-types" }
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
