[package]
name = "uhost-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "UHost runtime kernel for route dispatch and surface policy"
readme = "../README.md"
repository = "https://github.com/docker-mobile/UHOST"
documentation = "https://github.com/docker-mobile/UHOST/tree/main/docs"
publish = false

[dependencies]
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
uhost-api = { path = "../uhost-api" }
uhost-core = { path = "../uhost-core" }
uhost-store = { path = "../uhost-store" }
uhost-types = { path = "../uhost-types" }

[dev-dependencies]
tempfile.workspace = true
