[package]
name = "uhost-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "File-backed durability primitives for UHost"
readme = "../README.md"
repository = "https://github.com/5136-cloud/EXPERIMENT-UHOST"
documentation = "https://github.com/5136-cloud/EXPERIMENT-UHOST/tree/main/docs"
publish = false

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
uhost-core = { path = "../uhost-core" }
uhost-types = { path = "../uhost-types" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
uhost-testkit = { path = "../uhost-testkit" }
