[package]
name = "uhost-types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared identifiers and data types for UHost"
readme = "../README.md"
repository = "https://github.com/docker-mobile/EXPERIMENT-UHOST"
documentation = "https://github.com/docker-mobile/EXPERIMENT-UHOST/tree/main/docs"
publish = false

[dependencies]
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
